# bbc-microbit-v2-rust-embedded-hal

./: README.md
00-hello-rtt-print/: Cargo.toml
00-hello-rtt-print/src/: main.rs
01-hello-defmt-rtt/.cargo/: config.toml
01-hello-defmt-rtt/src/: main.rs
02-hello-delay/: Cargo.toml
02-hello-delay/src/: main.rs
02-hello-gpio/: Cargo.toml
02-hello-gpio/src/: main.rs
03-hello-gpio/src/: main.rs
04-hello-i2c/: Cargo.toml
04-hello-i2c/.cargo/: config.toml
04-hello-i2c/src/: main.rs
05-hello-spi/: Cargo.toml
05-hello-spi/src/: main.rs
06-hello-uart/: Cargo.toml
06-hello-uart/src/: main.rs
07-hello-rtc/: Cargo.toml
07-hello-rtc/src/: main.rs  timer.rs
08-hello-rtc-overflow/: Cargo.toml
08-hello-rtc-overflow/src/: ticker.rs
09-hello-state-machine/: Cargo.toml
09-hello-state-machine/src/: blinky.rs  hello.rs  main.rs  timer.rs
10-hello-future-timer/: Cargo.toml
10-hello-future-timer/src/: blinky.rs  main.rs  ticker.rs
11-hello-future-executor/: Cargo.toml
11-hello-future-executor/src/: executor.rs  main.rs  ticker.rs  timer.rs
12-hello-async-await/: memory.x
12-hello-async-await/src/: main.rs
12-hello-waker/: Cargo.toml
12-hello-waker/src/: executor.rs  main.rs  ticker.rs  timer.rs
13-hello-async-await/: Cargo.toml
13-hello-async-await/src/: main.rs
hello-async/: Cargo.toml
hello-async-await/: Cargo.toml
hello-async-await/.cargo/: config.toml
hello-async-await/src/: main.rs
hello-async/src/: main.rs
hello-defmt-rtt/: Cargo.toml
hello-defmt-rtt/src/: main.rs
hello-embedded-hal/: Cargo.toml
hello-embedded-hal/.cargo/: config.toml
hello-gpio/: Cargo.toml
hello-rtt-print/: Cargo.toml
(+7 files in other folders)
