[package]
name = "hello-spi"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
# embassy-nrf = {version = "0.9.0", features = ["nrf52833"]}
# embassy-time = "0.5.0"
embedded-graphics = "0.8.1"
# defmt = "1.0.1"
# defmt-rtt = "1.1.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
nrf52833-hal = "0.18.0"
panic-halt = "1.0.0"
rtt-target = "0.6.1"
ssd1306 = "0.8.0"
