[package]
name = "hello-async-await"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
embedded-hal = "1.0.0"
rtt-target = "0.6.2"
critical-section = "1.2.0"
embassy-executor = {version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt"]}
embassy-time = { version = "0.5.1", features = ["tick-hz-32_768"]}
embassy-nrf = {version = "0.10.0", features = ["nrf52833", "time-driver-rtc1"]}

[features]
trigger-overflow = []
