[package]
name = "hello-async-await"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-nrf = { version = "0.9.0", features = ["nrf52833", "time", "time-driver-rtc1"] }
embassy-time = "0.5.0"
panic-halt = "1.0.0"
rtt-target = "0.6.2"
 